# pythonAPI

./: alembic.ini  database.py  jwt_auth.py  main.py  main_backup.py  models.py  png_to_tiff.py  requirements.txt
alembic/: env.py
alembic/versions/: 6368c34c204c_.py  824ca3d4d1b0_.py  893f916efa7d_.py  dbb3981310ae_.py
fastapi/: alembic.ini  database.py  main.py  models.py  requirements.txt
images/: MicrosoftTeams-image (3).tiff  MicrosoftTeams-image (4)
images/tiff/: MicrosoftTeams-image (5)  MicrosoftTeams-image (6)
python/: Makefile  pyproject.toml
python/app/: lambda_function.py  lambda_types.py  model_utils.py  weather_types.py
pythonPractice/: first.py
zn_project_practice/: pyproject.toml
