[tool.poetry]
name = "weather2Tiff"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.115"
boto3-stubs = {extras = ["s3", "sns"], version = "^1.26.115"}
ddtrace = "^1.10.0"
datadog-lambda = "^4.69.0"
numpy = "^1.24.2"
requests = "^2.28.2"
types-requests = "^2.28.2"
pydantic = "^1.10.7"
h5py = "^3.8.0"
pillow = "^9.5.0"
types-pillow = "^9.5.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
mypy = "^1.2.0"
black = "^23.3.0"
ruff = "^0.0.261"

[tool.black]
line-length = 120

[tool.ruff]
target-version = "py39"
line-length = 120
select = [
  "E",   # pycodestyle
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "UP",  # pyupgrade
  "N",   # pep8-naming
  "Q",   # flake8-quotes
  "B",   # flake8-bugbear
  "A",   # flake8-builtins
  "DTZ", # flake8-datetimez
  "ISC", # flake8-implicit-str-concat
  "G",   # flake8-logging-format
  "PIE", # flake8-pie
  "PLE", # pylint errors
  "NPY", # numpy-specific
  "RUF", # ruff-specific
]

[tool.mypy]
strict = true
incremental = true
allow_redefinition = true
exclude = [ "\\.venv", "\\.poetry-venv" ]
plugins = [ "pydantic.mypy" ]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[[tool.mypy.overrides]]
module = [
    "h5py",
]
ignore_missing_imports = true


[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
